--- a/kontakt.html
+++ b/kontakt.html
@@ -73,26 +73,27 @@
               <h2>Kontakt os:</h2>
   
               <div class="row">
-                <div class="telefon col-12 col-lg-6">
+                <div class="telefon col-12">
                   <p class="mb-1">Telefon.nr.:</p>
-                  <a href="tel:+45 27 14 78">+45 27 14 78 **</a>
+                  <a href="tel:+45 27 14 78">+45 27 14 78</a>
                 </div>
   
-                <div class="mail col-12 col-lg-6">
+                <div class="mail col-6">
                   <p class="mb-1">Mail:</p>
                   <a href="mailto:lille@skaal.dk">lille@skaal.dk</a>
                 </div>
               </div>
   
-              <div class="row mt-2">
-                <div class="hjerte col-6 text-end">
-                  <p>&lt;3</p>
+              <div class="row mt-5">
+                <div class="hjerte col-4 text-end align-items-between">
+                  <!-- fs-1 gør det størrer -->
+                  <i class="bi bi-suit-heart fs-1"></i>
                 </div>
-                <div class="col-6 text-end">
-                  <a href=""><i class="bi bi-instagram m-2 fs-3"></i></a>
-                  <a href=""><i class="bi bi-tiktok fs-3"></i></a>
-                  
+                <div class="col-8 text-start ps-4">
+                  <a href=""><i class="bi bi-instagram m-2 fs-1"></i></a>
+                  <a href=""><i class="bi bi-tiktok fs-1"></i></a>
                 </div>
+                
               </div>
             </div>
           </div>
