--- a/foraar1.html
+++ b/foraar1.html
@@ -75,7 +75,7 @@
 
 <!--INTRODUKTIONS-AFSNIT-->
 <div class="container">
-  <div class="row align-items-start my-5 mx-sm-5">
+  <div class="row align-items-start my-5 mx-sm-4">
     <!--Tekstfelt m. introduktion til side-->
     <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
     <div class="col-12 col-sm-6">
@@ -157,7 +157,7 @@
 </section>
 
 <!--Musik-->
-<section class="container playlist-section my-5 mx-sm-5">
+<section class="container playlist-section my-5 px-sm-5">
     <h3>Gør det hyggeligt!</h3>
     <p>Hæld et glas hvidvin op og nyd vores playliste, mens du hygger dig med madlavningen</p>
 
@@ -171,12 +171,16 @@
 
 
 <!--Andre opskrifter-->
-<section class="container my-5 mx-sm-5">
+<section class="container my-5 px-sm-5">
     <h3>Hvad skal du lave i morgen?</h3>
 
-    <div class="d-none d-sm-flex">
-        <a class="col-12 col-sm-6" href="foraar2.html" class="col-12 col-sm-5"><img src="https://placehold.co/60x40" alt=""></a>
-        <a class="col-12 col-sm-6" href="foraar3html." class="col-12 col-sm-5"><img src="https://placehold.co/60x40" alt=""></a>
+    <div class="d-flex flex-column flex-sm-row justify-content-center align-items-center gap-3 mt-3">
+        <a class="col-12 col-sm-5" href="foraar2.html">
+            <img src="img/stemning/digital1.png" alt="">
+        </a>
+        <a class="col-12 col-sm-5" href="foraar3.html">
+            <img src="img/stemning/digital2.png" alt="">
+        </a>
     </div>
 </section>
 
@@ -184,7 +188,7 @@
 
 <!--Kommentarspor-->
 
-<div class="comment-section container my-5 mx-sm-5">
+<div class="comment-section container my-5 px-sm-5">
   <div class="comment-form">
     <h2>Har du spørgsmål til opskriften?</h2>
     <p>Har du et spørgsmål til opskriften eller lyst til at sende en hilsen med et tip, så kan du skrive til os i kommentarfeltet herunder.</p>
