--- a/foraar1.html
+++ b/foraar1.html
@@ -108,22 +108,13 @@
             <!--Venstre side: ingredienser & billeder-->
         <div class="collage-opskrift-container col-12 col-sm-5">
             <div class="ingredienser-boks">
-                <h4>Ingredienser</h4>
-                    <ul>
-                        <li>150 g pasta</li>
-                        <li>1 håndfuld spidskål</li>
-                        <li>6-8 cerrytomater</li>
-                        <li>1 håndfuld ramsløg</li>
-                        <li>1/2 dl olie</li>
-                        <li>Lidt citronsaft</li>
-                        <li>Salt</li>
-                    </ul>
+                <img src="" alt="">
             </div>
 
             <div>
-                <img src="img/omos/paastranden.png" class="billede pesto" alt="">
-                <img src="https://placehold.co/60x40" class="billede pastaret" alt="">
-                <img src="img/kurv.png" class="billede bord" alt="">
+                <img src="img/foraar/foraar1billede1.png" class="billede pesto" alt="">
+                <img src="img/foraar/foraar1billede2.png" class="billede pastaret" alt="">
+                <img src="img/foraar/foraar1billede3.png" class="billede bord" alt="">
             </div>
     </div>
 
