--- a/foraar1.html
+++ b/foraar1.html
@@ -179,7 +179,7 @@
 
 <!--Kommentarspor-->
 
-<div class="comment-section container my-5 px-sm-5">
+<div class="comment-section container d-flex flex-column flex-md-row  my-5 px-sm-5">
   <div class="comment-form">
     <h2>Har du spørgsmål til opskriften?</h2>
     <p>Har du et spørgsmål til opskriften eller lyst til at sende en hilsen med et tip, så kan du skrive til os i kommentarfeltet herunder.</p>
