--- a/foraar1.html
+++ b/foraar1.html
@@ -108,16 +108,7 @@
             <!--Venstre side: ingredienser & billeder-->
         <div class="collage-opskrift-container col-12 col-sm-5">
             <div class="ingredienser-boks">
-                <h4>Ingredienser</h4>
-                    <ul>
-                        <li>150 g pasta</li>
-                        <li>1 håndfuld spidskål</li>
-                        <li>6-8 cerrytomater</li>
-                        <li>1 håndfuld ramsløg</li>
-                        <li>1/2 dl olie</li>
-                        <li>Lidt citronsaft</li>
-                        <li>Salt</li>
-                    </ul>
+                <img src="img/blaaboks.png" alt="">
             </div>
 
             <div>
