--- a/foraar1.html
+++ b/foraar1.html
@@ -91,7 +91,7 @@
 
 
 <!--Info-linje om tid og antal per.-->
-<section class="container-fluid orange mere-padding">
+<section class="container-fluid orange py-5">
 <section class="text-center">
     <h2>Opskrift</h2>
     <!--sætter hver p ved siden af hinanden horisontalt-->
@@ -102,27 +102,34 @@
     </div>
 </section>
 
+<!--Sektion m. billeder og fremgangsmåde-->
+<div class="container my-5 px-sm-5">
+  <div class="row align-items-start d-flex flex-column flex-md-column flex-lg-row">
 
-<section class="px-sm-5">
-    <div class="d-flex flex-column flex-md-row gap-4 py-5">
-            <!--Venstre side: ingredienser & billeder-->
-        <div class="collage-opskrift-container col-12 col-sm-5">
-            <div class="ingredienser-boks">
-                <img src="img/blaaboks.png" alt="">
+    <div class="col collage-opskrift-container">
+    	    <div>
+                <h3>Ingredienser</h3>
+                    <ul>
+                        <li>150g pasta</li>
+                        <li>1 håndfuld spidskål</li>
+                        <li>8 cherrytomater</li>
+                        <li>1 håndfuld ramsløg</li>
+                        <li>1/2 dl olie</li>
+                        <li>1 spsk solsikkekerner</li>
+                        <li>Citronsaft</li>
+                    </ul>
             </div>
 
-            <div>
-                <img src="img/omos/paastranden.png" class="billede pesto" alt="">
-                <img src="https://placehold.co/60x40" class="billede pastaret" alt="">
-                <img src="img/kurv.png" class="billede bord" alt="">
-            </div>
+        <img src="img/foraar/foraar1billede1.png" class="billede opskrift-billede1" alt="">
+        <img src="img/foraar/foraar1billede2.png" class="billede opskrift-billede2" alt="">
+        <img src="img/foraar/foraar1billede3.png" class="billede opskrift-billede3" alt="">
     </div>
 
 
-    <!--Højre side: beskrivelse af fremgangsmåde-->
-        <div class="col-12 col-sm-4 offset-sm-1">
-            <h3>Fremgangsmåde</h3>
-            <p><strong>Kog pastaen</strong></p>
+
+    <div class="col fremgangsmaade">
+      <h3>Fremgangsmåde</h3>
+        <p><strong>Kog pastaen</strong></p>
             <p>Kog pastaen efter anvisning på pakken, og gem lidt kogevand til at justere konsistensen senere.</p>
 
             <p><strong>Lav pestoen</strong></p>
@@ -137,15 +144,15 @@
 
             <p><strong>Server</strong></p>
             <p>Server med ekstra pesto og evt. revet ost eller friskhakkede urter på toppen.</p>
-        </div>
+      
     </div>
+  </div>
+</div>
 
-            <div class="tip-boks">
-            <p><strong>Et lille tip!</strong></p>
-            <p>Hvis du har pesto til overs, kan den opbevares i en tætsluttende beholder i fryseren og bruges til sandwich, pizza eller som dip senere</p>
-            </div>
 </section>
-</section>
+
+
+
 
 <!--Musik-->
 <section class="container playlist-section my-5 px-sm-5">
