--- a/kontakt.html
+++ b/kontakt.html
@@ -62,28 +62,24 @@
     <div class="container">
       <div class="row justify-content-center align-items-center">
   
-        <!-- Kontaktblok med tekst ovenpå billede -->
+        <!-- Kontaktboks ovenpå billede -->
         <div class="col-12 col-md-5 my-5">
           <div class="position-relative">
             <!-- Baggrundsbillede -->
             <img src="img/lilleserviet.png" alt="Serviet">
-  
             <!-- Tekst ovenpå billedet -->
             <div class="kontakt-tekst position-absolute top-50 start-50 translate-middle">
               <h2>Kontakt os:</h2>
-  
               <div class="row">
                 <div class="telefon col-12">
                   <p class="mb-1">Telefon.nr.:</p>
-                  <a href="tel:+45 27 14 78">+45 27 14 78</a>
+                  <a href="tel:+45 27 14 78">+45 27 14 78 **</a>
                 </div>
-  
                 <div class="mail col-6">
                   <p class="mb-1">Mail:</p>
                   <a href="mailto:lille@skaal.dk">lille@skaal.dk</a>
                 </div>
               </div>
-  
               <div class="row mt-5">
                 <div class="hjerte col-4 text-end align-items-between">
                   <!-- fs-1 gør det størrer -->
