--- a/skabelon.html
+++ b/skabelon.html
@@ -118,15 +118,15 @@
                   </div>
               </div>
 
-              <div class="row mt-3 justify-content-center">
-                  <div class="hjerte col-6 text-end">
-                      <p>&lt;3</p>
-                  </div>
-                  <div class="some col-6 text-end">
-                      <i class="bi bi-instagram me-2"></i>
-                      <i class="bi bi-tiktok"></i>
-                  </div>
-              </div>
+              <div class="row mt-5">
+                <div class="hjerte col-4 text-end align-items-between">
+                  <!-- fs-1 gør det størrer -->
+                  <i class="bi bi-suit-heart fs-1"></i>
+                </div>
+                <div class="col-8 text-end ps-5">
+                  <a href=""><i class="bi bi-instagram m-2 fs-1"></i></a>
+                  <a href=""><i class="bi bi-tiktok fs-1"></i></a>
+                </div>
           </div>
       </div>
 
