--- a/alleopskrifter.html
+++ b/alleopskrifter.html
@@ -97,15 +97,15 @@
     <div class="row align-items-start px-5">
         <h2>Forår</h2>
              <div class="col">
-            <a href="foraar1.html"><img src="https://placehold.co/80x100" alt=""></a>
+            <a href="foraar1.html"><img src="img/foraar/foraaropskrift1.png" alt=""></a>
             <a href="foraar1.html"><h3>Opskrift</h3></a>
             </div>
         <div class="col">
-        <a href="foraar2.html"><img src="https://placehold.co/80x100" alt=""></a>
+        <a href="foraar2.html"><img src="img/foraar/foraar2billede1.png" alt=""></a>
         <a href="foraar2.html"><h3>Opskrift</h3></a>
         </div>
     <div class="col">
-      <a href="foraar3.html"><img src="https://placehold.co/80x100" alt=""></a>
+      <a href="foraar3.html"><img src="img/foraar/foraar3billede2.png" alt=""></a>
       <a href="foraar3.html"><h3>Opskrift</h3></a>
     </div>
     </div>
@@ -118,7 +118,7 @@
   <div class="row align-items-start py-5 px-5">
     <h2>Sommer</h2>
     <div class="col">
-      <a href="sommer1.html"><img src="https://placehold.co/80x100" alt=""></a>
+      <a href="sommer1.html"><img src="img/sommer/sommer1billede1.png" alt=""></a>
       <a href="sommer1.html"><h3>Opskrift</h3></a>
     </div>
     <div class="col">
@@ -182,21 +182,21 @@
     <h2>Forår</h2>
     <a href="foraar1.html">
         <div class="carousel-item active text-center">
-            <img src="https://placehold.co/100x80" class="d-block w-100" alt="...">
+            <img src="img/foraar/foraaropskrift1.png" class="d-block w-100" alt="...">
             <h3>Opskrift</h3>
         </div>
     </a>
 
     <a href="foraar2.html">
-        <div class="carousel-item active text-center">
-            <img src="https://placehold.co/100x80" class="d-block w-100" alt="...">
+        <div class="carousel-item text-center">
+            <img src="img/foraar/foraar2billede1.png" class="d-block w-100" alt="...">
             <h3>Opskrift 2</h3>
         </div>
     </a>
 
     <a href="foraar3.html">
-        <div class="carousel-item active text-center">
-            <img src="https://placehold.co/100x80" class="d-block w-100" alt="...">
+        <div class="carousel-item text-center">
+            <img src="img/foraar/foraar3billede2.png" class="d-block w-100" alt="...">
             <h3>Opskrift 3</h3>
         </div>
     </a>
@@ -219,7 +219,7 @@
     <h2>Sommer</h2>
     <a href="sommer1.html">
         <div class="carousel-item active text-center">
-            <img src="https://placehold.co/100x80" class="d-block w-100" alt="...">
+            <img src="img/sommer/sommer1billede1.png" class="d-block w-100" alt="...">
             <h3>Opskrift</h3>
         </div>
     </a>
