--- a/foraar.html
+++ b/foraar.html
@@ -62,8 +62,8 @@
     <!--position-relative: gør container til ref. for det, som skal placeres ovenpå-->
     <div class="hero-sektion position-relative">
         <picture>
-            <source media="(min-width: 768px)" srcset="https://placehold.co/1240x400">
-            <img src="https://placehold.co/100x100" alt="">
+            <source media="(min-width: 768px)" srcset="img/foraar/foraarhero.png">
+            <img src="img/foraar/foraarheromobil.png" alt="">
         </picture>
 
 
@@ -105,15 +105,15 @@
             </div>
         <div class="row align-items-start px-sm-5">
             <div class="col-12 col-sm-4 py-3">
-                <a href="foraar1.html"><img src="https://placehold.co/80x100" alt=""></a>
+                <a href="foraar1.html"><img src="img/foraar/foraaropskrift1.png" alt=""></a>
                 <a href="foraar1.html"><h3>Opskrift</h3></a>
             </div>
             <div class="col-12 col-sm-4 py-3">
-                <a href="foraar2.html"><img src="https://placehold.co/80x100" alt=""></a>
+                <a href="foraar2.html"><img src="img/foraar/foraar2billede1.png" alt=""></a>
                 <a href="foraar2.html"><h3>Opskrift</h3></a>
             </div>
         <div class="col-12 col-sm-4 py-3">
-            <a href="foraar3.html"><img src="https://placehold.co/80x100" alt=""></a>
+            <a href="foraar3.html"><img src="img/foraar/foraar3billede2.png" alt=""></a>
             <a href="foraar3.html"><h3>Opskrift</h3></a>
         </div>
         </div>
