--- a/foraar1.html
+++ b/foraar1.html
@@ -90,10 +90,17 @@
 </div>
 
 
+
 <!--Info-linje om tid og antal per.-->
 <section class="container-fluid orange py-5">
 <section class="text-center">
     <h2>Opskrift</h2>
+
+<!--Linje-->
+<hr class="linje">
+
+
+
     <!--sætter hver p ved siden af hinanden horisontalt-->
     <div class="d-flex justify-content-evenly">
         <p>2 personer</p>
@@ -107,7 +114,7 @@
   <div class="row align-items-start d-flex flex-column flex-md-column flex-lg-row">
 
     <div class="col collage-opskrift-container">
-    	    <div>
+    	    <div class="ingredienser">
                 <h3>Ingredienser</h3>
                     <ul>
                         <li>150g pasta</li>
