--- a/index.html
+++ b/index.html
@@ -159,6 +159,48 @@
 </section>
 
 
+<!-- footer -->
+<footer class="py-4">
+  <div class="container d-flex flex-column align-items-center justify-content-center">
+
+      <!-- Servietbillede som baggrund -->
+      <div class="position-relative py-5 py-md-5">
+          <picture>
+              <source media="(min-width: 768px)" srcset="img/storserviet.png">
+              <img src="img/lilleserviet.png" alt="Serviet" >
+          </picture>
+
+          <!-- Tekst ovenpå billedet -->
+          <div class="kontakt-boks position-absolute top-50 start-50 translate-middle">
+              <h3>Kontakt os:</h3>
+
+              <div class="row justify-content-center">
+                  <div class="telefon col-12 col-md-6">
+                      <p>Telefon.nr.:</p>
+                      <a href="tel:+45 27 14 78">+45 27 14 78 **</a>
+                  </div>
+
+                  <div class="mail col-12 col-md-6">
+                      <p>Mail:</p>
+                      <a href="mailto:lille@skaal.dk">lille@skaal.dk</a>
+                  </div>
+              </div>
+
+              <div class="row mt-5">
+                <div class="hjerte col-4 text-end align-items-between">
+                  <!-- fs-1 gør det størrer -->
+                  <i class="bi bi-suit-heart fs-3"></i>
+                </div>
+                <div class="col-8 text-end ps-5">
+                  <a href=""><i class="bi bi-instagram m-2 fs-3"></i></a>
+                  <a href=""><i class="bi bi-tiktok fs-3"></i></a>
+                </div>
+          </div>
+      </div>
+
+  </div>
+</footer>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous">
     </script>
