--- a/foraar1.html
+++ b/foraar1.html
@@ -56,21 +56,18 @@
 
 <!--HERO-SEKTION-->
 <!--BAGGRUNDSBILLEDE-->
-<!--position-relative: gør container til ref. for det, som skal placeres ovenpå-->
 <div class="hero-sektion position-relative">
     <picture>
-      <source media="(min-width: 768px)" srcset="https://placehold.co/1240x400">
-      <img src="https://placehold.co/100x100" alt="">
+      <source media="(min-width: 768px)" srcset="img/foraar/heroopskrift.png">
+      <img src="img/foraar/foraarheromobil.png" alt="">
     </picture>
 
+</div>
 
-        <!--TEKST/LOGO OVER BAGGRUNDSBILLEDE-->
-        <!--position-absolute top-0 start 0: placer indholdet i øverste venstre hjørne-->
-        <!--w-100 h-100: gør overlay lige så stort som billedet-->
-        <!--d-flex ....: centrerer tekst midt i billedet-->
-        <div class="position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-center       align-items-center text-center">
-            <h1>Pasta med tomat, spidskål og ramsløgspesto</h1>
-        </div>
+<!--TEKST UNDER HERO-->
+
+<div class="container my-sm-5 px-sm-5">
+  <h2>Pasta med tomat, spidskål og ramsløgspesto</h2>
 </div>
 
 <!--INTRODUKTIONS-AFSNIT-->
