--- a/sommer.html
+++ b/sommer.html
@@ -60,8 +60,8 @@
     <!--position-relative: gør container til ref. for det, som skal placeres ovenpå-->
     <div class="hero-sektion position-relative">
         <picture>
-            <source media="(min-width: 768px)" srcset="https://placehold.co/1240x400">
-            <img src="https://placehold.co/100x100" alt="">
+            <source media="(min-width: 768px)" srcset="img/sommer/sommerhero.png">
+            <img src="img/sommer/sommerheromobil.png" alt="">
         </picture>
 
 
