--- a/faelleskaal2.html
+++ b/faelleskaal2.html
@@ -79,9 +79,9 @@
     <div class="row g-md-3 g-lg-5 mx-md-5">
       <div class="col-12 col-lg-6">
         <h2>Fokus på Fællesskabet</h2>
-        <p>Vi elsker selv at kræse om maden, men det, der virkelig gør det hele værd, er fællesskabet omkring den. For os handler madlavning ikke kun om, hvad der ligger på tallerkenen, men om dem, man deler det med.
-            <br>
-        Fællesskab kan opstå både i et køkken, omkring et spisebord – og på en skærm. Derfor arbejder vi for at gøre madlavning sjov, nærværende og inspirerende – både digitalt og i virkeligheden.</p>
+        <p>Hos Lille Skål er fællesskab ikke bare noget, vi taler om - det er noget, vi skaber. Vi tror på, at den største madglæde opstår, når vi laver og deler mad med andre. Gennem opskrifter, events og inspiration bringer vi mennesker sammen om hverdagsmåltider, der smager af mere end bare mad.
+        <br>
+        Uanset om det foregår rundt om spisebordet eller via en skærm, bygger vi et madfællesskab, hvor sæsonens råvarer, hjemmelavet mad og nærvær er i centrum. Her handler det ikke om perfektion - men om stemning, ægthed og glæden ved at være fælles om maden.</p>
       </div>
 
     
@@ -108,8 +108,10 @@
   
       <div class="col-12 col-md-6">
         <h2>Lad os skabe minder</h2>
-        <p>Hos Lille Skål elsker vi at bringe mennesker sammen omkring maden – ikke kun digitalt, men også i virkeligheden. Derfor inviterer vi løbende til fællesspisninger, hyggelige madkurser og sæsonbaserede events, hvor der er plads til både grin, inspiration og kærlighed til hverdagsmad. <br>
-        Vores fysiske fællesskab handler ikke om at være en mesterkok, men om at mødes i øjenhøjde med andre madglade mennesker. Uanset om du kommer alene eller tager en ven med, lover vi god stemning, ægte nærvær og måske en ny ven eller to. <br> Kom og vær med – vi dækker op til fælles-skål.</p>
+        <p>Lad os skabe minder - sammen.
+        Hos Lille Skål elsker vi at samle mennesker om maden i virkeligheden. Derfor inviterer vi jævnligt til fællesspisninger, hyggelige madkurser og små sæsonbaserede events, hvor alle kan være med - uanset erfaring i køkkenet.
+        <br>
+        Her handler det ikke om at præstere, men om at mødes i øjenhøjde og dele smagen af hjemmelavet mad. Vi dækker op til grin, nærvær og gode samtaler - og lover, at du altid går hjem med både mæt mave og varme minder. Om du kommer alene eller tager en ven med, er der plads til dig ved vores fælles bord.</p>
       </div>
   
     </div>
