--- a/faelleskaal2.html
+++ b/faelleskaal2.html
@@ -78,10 +78,10 @@
 <div class="container my-5">
     <div class="row g-md-3 g-lg-5 mx-md-5">
       <div class="col-12 col-lg-6">
-        <h2>Fokus på Fællesskabet</h2>
-        <p>Hos Lille Skål er fællesskab ikke bare noget, vi taler om - det er noget, vi skaber. Vi tror på, at den største madglæde opstår, når vi laver og deler mad med andre. Gennem opskrifter, events og inspiration bringer vi mennesker sammen om hverdagsmåltider, der smager af mere end bare mad.
+        <h2>Fællesskab omkring mad</h2>
+        <p>Hos Lille Skål handler fællesskab om at samles om maden - både fysisk og digitalt. Vi tror på, at madglæde vokser, når vi deler den med andre. Gennem opskrifter, events og inspiration skaber vi et madfællesskab, hvor sæsonens råvarer, hjemmelavet mad og nærvær er i centrum.
         <br>
-        Uanset om det foregår rundt om spisebordet eller via en skærm, bygger vi et madfællesskab, hvor sæsonens råvarer, hjemmelavet mad og nærvær er i centrum. Her handler det ikke om perfektion - men om stemning, ægthed og glæden ved at være fælles om maden.</p>
+        Her er der plads til ægthed, stemning og det uperfekte - for det bedste måltid er det, vi nyder sammen.</p>
       </div>
 
     
@@ -124,8 +124,11 @@
         <div class="row g-md-3 g-lg-5">
             <div class="col-12 col-md-6 tilmelding-boks-faellesskaal">
             <h2>Bliv inspireret i din indbakke</h2>
-            <p>Et par gange om måneden sender vi inspiration direkte til din indbakke. Her deler vi opskrifter, der følger sæsonen, tips til mad på budget og små historier fra vores madunivers, hvor det hjemmelavede måltid og den gode stemning er i centrum.
-            Du får også første besked, når vi inviterer til events og fællesspisning. Tilmeld dig vores e-magasin</p>
+            <p>Madglæde stopper ikke ved køkkenbordet – den lever også videre online.
+            Vores digitale fællesskab er til dig, der elsker at nørde med budgetvenlig mad, finde nye idéer med sæsonens råvarer og dele hverdagsglimt fra køkkenet. På både vores website og Instagram skaber vi et ærligt og uformelt madunivers, hvor du kan finde og dele opskrifter, tips og madstemning – sammen med andre, der elsker mad på samme måde som dig.
+            <br>
+            Hos Lille Skål tror vi på, at inspiration og fællesskab sagtens kan leve på tværs af skærme – og vi glæder os til at være fælles med dig, også digitalt.
+            </p>
             
             <form id="contact-form">
             <!-- To simplify the tutorial, the value is static. -->
@@ -211,7 +214,11 @@
 
       <div class="col-md-6 col-12 pt-5">
         <h2>Et digitalt fællesskab</h2>
-        <p>Hos Lille Skål vil vi gerne samle alle os, der elsker at nørde med mad – også online. Del dine yndlingsopskrifter, små hverdagsglimt og tips til køkkenhygge med os og andre via vores website og Instagram. <br> Det digitale fællesskab er en vigtig del af vores univers, hvor vi inspirerer og skaber madglæde sammen – på tværs af skærme og køkkener.</p>
+        <p>Bliv en del af vores madunivers - direkte fra indbakken.
+        Et par gange om måneden sender vi vores e-magasin fyldt med sæsonbaserede opskrifter, ideer til budgetvenlig madlavning, og små historier fra fællesskabet.
+        <br>
+        Du får også tips til at undgå madspild, nyheder om kommende events og fællesspisninger - og mulighed for at kigge med i tidligere udgaver af magasinet.
+        Tilmeld dig vores e-magasin og få et fast dryp af madinspiration, fællesskab og stemning - lige der, hvor du er.</p>
       </div>
 
 
