--- a/faelleskaal2.html
+++ b/faelleskaal2.html
@@ -107,8 +107,8 @@
       </div>
   
       <div class="col-12 col-md-6">
-        <h2>Lad os skabe minder</h2>
-        <p>Lad os skabe minder - sammen.
+        <h2>Lad os skabe minder sammen</h2>
+        <p>
         Hos Lille Skål elsker vi at samle mennesker om maden i virkeligheden. Derfor inviterer vi jævnligt til fællesspisninger, hyggelige madkurser og små sæsonbaserede events, hvor alle kan være med - uanset erfaring i køkkenet.
         <br>
         Her handler det ikke om at præstere, men om at mødes i øjenhøjde og dele smagen af hjemmelavet mad. Vi dækker op til grin, nærvær og gode samtaler - og lover, at du altid går hjem med både mæt mave og varme minder. Om du kommer alene eller tager en ven med, er der plads til dig ved vores fælles bord.</p>
@@ -213,7 +213,7 @@
 
 
       <div class="col-md-6 col-12 pt-5">
-        <h2>Et digitalt fællesskab</h2>
+        <h2>Del glæden online</h2>
         <p>Bliv en del af vores madunivers - direkte fra indbakken.
         Et par gange om måneden sender vi vores e-magasin fyldt med sæsonbaserede opskrifter, ideer til budgetvenlig madlavning, og små historier fra fællesskabet.
         <br>
