--- a/alleopskrifter.html
+++ b/alleopskrifter.html
@@ -54,25 +54,11 @@
 </nav>
 
 
+<!--OVERSKRIFT-->
 
-<!--HERO-SEKTION-->
-<!--BAGGRUNDSBILLEDE-->
-<!--position-relative: gør container til ref. for det, som skal placeres ovenpå-->
-<div class="hero-sektion position-relative">
-    <picture>
-      <source media="(min-width: 768px)" srcset="https://placehold.co/1240x400">
-      <img src="https://placehold.co/100x100" alt="">
-    </picture>
-
-
-        <!--TEKST/LOGO OVER BAGGRUNDSBILLEDE-->
-        <!--position-absolute top-0 start 0: placer indholdet i øverste venstre hjørne-->
-        <!--w-100 h-100: gør overlay lige så stort som billedet-->
-        <!--d-flex ....: centrerer tekst midt i billedet-->
-        <div class="position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-center       align-items-center text-center">
-            <h1>ALLE OPSKRIFTER</h1>
-            <p>Gør mere med mindre – lækre måltider til små budgetter.</p>
-        </div>
+<div class="container my-sm-5 px-sm-5">
+  <h1>Alle opskrifter</h1>
+            <h4>Gør mere med mindre – lækre måltider til små budgetter.</h4>
 </div>
 
 <!--INTRODUKTIONS-AFSNIT-->
@@ -122,11 +108,11 @@
       <a href="sommer1.html"><h3>Opskrift</h3></a>
     </div>
     <div class="col">
-      <a href="sommer2.html"><img src="https://placehold.co/80x100" alt=""></a>
+      <a href="sommer2.html"><img src="img/sommer1.png" alt=""></a>
       <a href="sommer2.html"><h3>Opskrift</h3></a>
     </div>
     <div class="col">
-      <a href="sommer3.html"><img src="https://placehold.co/80x100" alt=""></a>
+      <a href="sommer3.html"><img src="img/sommer/sommer3billede1.png" alt=""></a>
       <a href="sommer3.html"><h3>Opskrift</h3></a>
     </div>
   </div>
@@ -158,15 +144,15 @@
   <div class="row align-items-start my-5 px-5">
     <h2>Vinter</h2>
     <div class="col">
-      <a href="vinter1.html"><img src="https://placehold.co/80x100" alt=""></a>
+      <a href="vinter1.html"><img src="img/vinter/vinter1.png" alt=""></a>
       <a href="vinter1.html"><h3>Opskrift</h3></a>
     </div>
     <div class="col">
-      <a href="vinter2.html"><img src="https://placehold.co/80x100" alt=""></a>
+      <a href="vinter2.html"><img src="img/vinter/vinter2billede2.png" alt=""></a>
       <a href="vinter2.html"><h3>Opskrift</h3></a>
     </div>
     <div class="col">
-      <a href="vinter3.html"><img src="https://placehold.co/80x100" alt=""></a>
+      <a href="vinter3.html"><img src="img/vinter/vinter3billede1.png" alt=""></a>
       <a href="vinter3.html"><h3>Opskrift</h3></a>
     </div>
   </div>
@@ -225,15 +211,15 @@
     </a>
 
     <a href="sommer2.html">
-        <div class="carousel-item active text-center">
-            <img src="https://placehold.co/100x80" class="d-block w-100" alt="...">
+        <div class="carousel-item text-center">
+            <img src="img/sommer1.png" class="d-block w-100" alt="...">
             <h3>Opskrift 2</h3>
         </div>
     </a>
 
     <a href="sommer3.html">
-        <div class="carousel-item active text-center">
-            <img src="https://placehold.co/100x80" class="d-block w-100" alt="...">
+        <div class="carousel-item text-center">
+            <img src="img/sommer/sommer3billede1.png" class="d-block w-100" alt="...">
             <h3>Opskrift 3</h3>
         </div>
     </a>
@@ -293,21 +279,21 @@
     <h2>Vinter</h2>
     <a href="vinter1.html">
         <div class="carousel-item active text-center">
-            <img src="https://placehold.co/100x80" class="d-block w-100" alt="...">
+            <img src="img/vinter/vinter1.png" class="d-block w-100" alt="...">
             <h3>Opskrift</h3>
         </div>
     </a>
 
     <a href="vinter2.html">
-        <div class="carousel-item active text-center">
-            <img src="https://placehold.co/100x80" class="d-block w-100" alt="...">
+        <div class="carousel-item text-center">
+            <img src="img/vinter/vinter2billede2.png" class="d-block w-100" alt="...">
             <h3>Opskrift 2</h3>
         </div>
     </a>
 
     <a href="vinter3.html">
-        <div class="carousel-item active text-center">
-            <img src="https://placehold.co/100x80" class="d-block w-100" alt="...">
+        <div class="carousel-item text-center">
+            <img src="img/vinter/vinter3billede1.png" class="d-block w-100" alt="...">
             <h3>Opskrift 3</h3>
         </div>
     </a>
