--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
 <section class="collage-container">
         <img src="img/kurv.png" class="billede kurv" alt="">
         <img src="img/foraarsbord.png" class="billede foraarsbord" alt="">
-        <img src="img/asparges.png" class="billede asparges" alt="">
-        <img src="img/tomat.png" class="billede tomat" alt="">
+        <img src="img/illustrationer/porre.png" class="billede asparges" alt="">
+        <img src="img/illustrationer/tomat.png" class="billede tomat" alt="">
         <img src="img/foraarsmad.png" class="billede foraarsmad" alt="">
         <img src="img/driver.png" class="billede driver" alt="">
         <img src="img/vin.png" class="billede vin" alt="">
