--- a/faelleskaal2.html
+++ b/faelleskaal2.html
@@ -124,7 +124,7 @@
         <div class="row g-md-3 g-lg-5">
             <div class="col-12 col-md-6 tilmelding-boks-faellesskaal">
             <h2>Bliv inspireret i din indbakke</h2>
-            <p>Madglæde stopper ikke ved køkkenbordet – den lever også videre online.
+            <p>Madglæde stopper ikke ved køkkenbordet - den lever også videre online.
             Vores digitale fællesskab er til dig, der elsker at nørde med budgetvenlig mad, finde nye idéer med sæsonens råvarer og dele hverdagsglimt fra køkkenet. På både vores website og Instagram skaber vi et ærligt og uformelt madunivers, hvor du kan finde og dele opskrifter, tips og madstemning – sammen med andre, der elsker mad på samme måde som dig.
             <br>
             Hos Lille Skål tror vi på, at inspiration og fællesskab sagtens kan leve på tværs af skærme – og vi glæder os til at være fælles med dig, også digitalt.
