--- a/alleopskrifter.html
+++ b/alleopskrifter.html
@@ -124,11 +124,11 @@
         <div class="row align-items-start px-5">
             <h2>Efterår</h2>
             <div class="col">
-                <a href="efteraar1.html"><img src="https://placehold.co/80x100" alt=""></a>
+                <a href="efteraar1.html"><img src="img/efteraar/efteraar1billede2.png" alt=""></a>
                 <a href="efteraar1.html"><h3>Opskrift</h3></a>
             </div>
             <div class="col">
-                <a href="efteraar2.html"><img src="https://placehold.co/80x100" alt=""></a>
+                <a href="efteraar2.html"><img src="img/efteraar/efteraar2billede1.png" alt=""></a>
                 <a href="efteraar2.html"><h3>Opskrift</h3></a>
             </div>
             <div class="col">
@@ -242,7 +242,7 @@
     <h2>Efterår</h2>
     <a href="efteraar1.html">
         <div class="carousel-item active text-center">
-            <img src="https://placehold.co/100x80" class="d-block w-100" alt="...">
+            <img src="img/efteraar/efteraar1billede2.png" class="d-block w-100" alt="...">
             <h3>Opskrift</h3>
         </div>
     </a>
