--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <!--Illustration til højre-->
     <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
     <div class="d-none d-sm-block col-sm-2 offset-sm-4">
-      <img src="img/illustrationer/vin.png" alt="illustration">
+      <img src="img/illustrationer/basilikum.png" alt="illustration">
     </div>
   </div>
 </div>
