--- a/faelleskaal2.html
+++ b/faelleskaal2.html
@@ -74,48 +74,42 @@
         </div>
 </div>
 
-<!--Første række med 2 kolonner-->
-<div class="container my-5">
-    <div class="row g-md-3 g-lg-5 mx-md-5">
-      <div class="col-12 col-lg-6">
-        <h2>Fællesskab omkring mad</h2>
-        <p>Hos Lille Skål handler fællesskab om at samles om maden - både fysisk og digitalt. Vi tror på, at madglæde vokser, når vi deler den med andre. Gennem opskrifter, events og inspiration skaber vi et madfællesskab, hvor sæsonens råvarer, hjemmelavet mad og nærvær er i centrum.
+
+  <!--Fællesskab omkring mad + billede m. glas-->
+<div class="container">
+  <div class="row align-items-start mx-md-5">
+    <div class="col-12 col-md-6 my-5">
+      <h2>Fællesskab omkring mad</h2>
+      <p>
+        Hos Lille Skål handler fællesskab om at samles om maden - både fysisk og digitalt. Vi tror på, at madglæde vokser, når vi deler den med andre. Gennem opskrifter, events og inspiration skaber vi et madfællesskab, hvor sæsonens råvarer, hjemmelavet mad og nærvær er i centrum.
         <br>
-        Her er der plads til ægthed, stemning og det uperfekte - for det bedste måltid er det, vi nyder sammen.</p>
-      </div>
-
-    
-      <div class="col-12 col-lg-6">
-        
-        <picture>
-            <img class="vinglas" src="img/faellesskaal.png" alt="">
-        </picture>
-
-      </div>
+        Her er der plads til ægthed, stemning og det uperfekte - for det bedste måltid er det, vi nyder sammen.
+      </p>
+    </div>
+    <div class="col-12 col-md-6 my-5">
+      <img class="vinglas" src="img/faellesskaal.png" alt="">
     </div>
   </div>
+</div>
 
 
-  <!--Anden række -->
-  <!--Lad os skabe minder sammen-->
-  <div class="container my-5">
-    <div class="row g-md-3 g-lg-5 mx-md-5">
-  
-      <div class="minicollage col-12 col-lg-6">
-        <img class="billede amalie-peber" src="img/stemning/amaliepeber.png" alt="">
-        <img class="billede laerke-pasta" src="img/stemning/spiserpasta.png" alt=""> 
-      </div>
-  
-      <div class="col-12 col-md-6">
-        <h2>Lad os skabe minder sammen</h2>
-        <p>
-        Hos Lille Skål elsker vi at samle mennesker om maden i virkeligheden. Derfor inviterer vi jævnligt til fællesspisninger, hyggelige madkurser og små sæsonbaserede events, hvor alle kan være med - uanset erfaring i køkkenet.
+
+<!--Lad os skabe minder sammen + billede af Lærke og Amalie-->
+<div class="container minicollage">
+  <div class=" row align-items-start">
+    <div class="col-12 col-md-6">
+      <img class="billede laerke-pasta" src="img/stemning/spiserpasta.png" alt="">
+      <img class="billede amalie-peber" src="img/stemning/amaliepeber.png" alt="">
+    </div>
+    <div class="col-12 col-md-6">
+      <h2>Lad os skabe minder sammen</h2>
+      <p>Hos Lille Skål elsker vi at samle mennesker om maden i virkeligheden. Derfor inviterer vi jævnligt til fællesspisninger, hyggelige madkurser og små sæsonbaserede events, hvor alle kan være med - uanset erfaring i køkkenet.
         <br>
-        Her handler det ikke om at præstere, men om at mødes i øjenhøjde og dele smagen af hjemmelavet mad. Vi dækker op til grin, nærvær og gode samtaler - og lover, at du altid går hjem med både mæt mave og varme minder. Om du kommer alene eller tager en ven med, er der plads til dig ved vores fælles bord.</p>
-      </div>
-  
+      Her handler det ikke om at præstere, men om at mødes i øjenhøjde og dele smagen af hjemmelavet mad. Vi dækker op til grin, nærvær og gode samtaler - og lover, at du altid går hjem med både mæt mave og varme minder. Om du kommer alene eller tager en ven med, er der plads til dig ved vores fælles bord.</p>
     </div>
   </div>
+</div>
+
 
   <!--Tredje række -->
   <!--E-magasin tilmelding-->
