--- a/faelleskaal2.html
+++ b/faelleskaal2.html
@@ -77,17 +77,18 @@
 
   <!--Fællesskab omkring mad + billede m. glas-->
 <div class="container">
-  <div class="row align-items-start mx-md-5">
-    <div class="col-12 col-md-6 my-5">
+  <div class="row align-items-start mx-md-5 py-5">
+    <div class="minicollage col-12 col-lg-6">
       <h2>Fællesskab omkring mad</h2>
       <p>
         Hos Lille Skål handler fællesskab om at samles om maden - både fysisk og digitalt. Vi tror på, at madglæde vokser, når vi deler den med andre. Gennem opskrifter, events og inspiration skaber vi et madfællesskab, hvor sæsonens råvarer, hjemmelavet mad og nærvær er i centrum.
         <br>
         Her er der plads til ægthed, stemning og det uperfekte - for det bedste måltid er det, vi nyder sammen.
       </p>
+      <img class="billede amalie-peber" src="img/stemning/amaliepeber.png" alt="">
     </div>
-    <div class="col-12 col-md-6 my-5">
-      <img class="vinglas" src="img/faellesskaal.png" alt="">
+    <div class="col-12 col-lg-6">
+      <img class="billede vinglas" src="img/faellesskaal.png" alt="">
     </div>
   </div>
 </div>
@@ -95,13 +96,12 @@
 
 
 <!--Lad os skabe minder sammen + billede af Lærke og Amalie-->
-<div class="container minicollage">
-  <div class=" row align-items-start">
-    <div class="col-12 col-md-6">
+<div class="container py-5">
+  <div class="minicollage row align-items-start py-5">
+    <div class="col-12 col-lg-6">
       <img class="billede laerke-pasta" src="img/stemning/spiserpasta.png" alt="">
-      <img class="billede amalie-peber" src="img/stemning/amaliepeber.png" alt="">
     </div>
-    <div class="col-12 col-md-6">
+    <div class="minder-sammen col-12 col-md-6">
       <h2>Lad os skabe minder sammen</h2>
       <p>Hos Lille Skål elsker vi at samle mennesker om maden i virkeligheden. Derfor inviterer vi jævnligt til fællesspisninger, hyggelige madkurser og små sæsonbaserede events, hvor alle kan være med - uanset erfaring i køkkenet.
         <br>
