--- a/faelleskaal2.html
+++ b/faelleskaal2.html
@@ -77,31 +77,34 @@
 
   <!--Fællesskab omkring mad + billede m. glas-->
 <div class="container">
-  <div class="row align-items-start mx-md-5 py-5">
-    <div class="minicollage col-12 col-lg-6">
+  <div class="row align-items-start mx-md-5 mt-5">
+    <div class="col-12 col-lg-7">
       <h2>Fællesskab omkring mad</h2>
       <p>
         Hos Lille Skål handler fællesskab om at samles om maden - både fysisk og digitalt. Vi tror på, at madglæde vokser, når vi deler den med andre. Gennem opskrifter, events og inspiration skaber vi et madfællesskab, hvor sæsonens råvarer, hjemmelavet mad og nærvær er i centrum.
         <br>
         Her er der plads til ægthed, stemning og det uperfekte - for det bedste måltid er det, vi nyder sammen.
       </p>
-      <img class="billede amalie-peber" src="img/stemning/amaliepeber.png" alt="">
     </div>
-    <div class="col-12 col-lg-6">
-      <img class="billede vinglas" src="img/faellesskaal.png" alt="">
+    <div class="col-12 col-lg-4 offset-lg-1">
+      <img src="img/faellesskaal.png" alt="">
     </div>
   </div>
 </div>
 
 
 
+
+
+
+
 <!--Lad os skabe minder sammen + billede af Lærke og Amalie-->
 <div class="container py-5">
-  <div class="minicollage row align-items-start py-5">
-    <div class="col-12 col-lg-6">
-      <img class="billede laerke-pasta" src="img/stemning/spiserpasta.png" alt="">
+  <div class=" row align-items-start py-5">
+    <div class="col-12 col-lg-4 offset-lg-1">
+      <img src="img/stemning/peberogpasta.png" alt="">
     </div>
-    <div class="minder-sammen col-12 col-md-6">
+    <div class="minder-sammen col-12 col-lg-6 ">
       <h2>Lad os skabe minder sammen</h2>
       <p>Hos Lille Skål elsker vi at samle mennesker om maden i virkeligheden. Derfor inviterer vi jævnligt til fællesspisninger, hyggelige madkurser og små sæsonbaserede events, hvor alle kan være med - uanset erfaring i køkkenet.
         <br>
