--- a/faellesskaal.html
+++ b/faellesskaal.html
@@ -59,7 +59,7 @@
 <!--BAGGRUNDSBILLEDE-->
 <!--position-relative: gør container til ref. for det, som skal placeres ovenpå-->
 <div class="container-fluid orange">
-  <div class="hero-sektion position-relative">
+  <div class="hero-sektion position-relative d-flex justify-content-center">
     <img class="bordhero" src="img/bord.png" alt="">
 
 
