--- a/karusel.html
+++ b/karusel.html
@@ -53,121 +53,16 @@
   </div>
 </nav>
 
-
-<!--OVERSKRIFT-->
-
-<div class="container my-sm-5 px-sm-5">
-  <h1>Alle opskrifter</h1>
-            <h4>Gør mere med mindre – lækre måltider til små budgetter.</h4>
-</div>
-
-<!--INTRODUKTIONS-AFSNIT-->
-<div class="container introduktion">
-  <div class="row align-items-start my-5 mx-4 mx-sm-4">
-    <!--Tekstfelt m. introduktion til side-->
-    <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
-    <div class="col-12 col-sm-6">
-      <p>Frisk forår, let sommer, varm vinter eller smagfuldt efterår? Her finder du nemme opskrifter med sæsonens danske råvarer – perfekt til både hverdagsmad og hyggelige måltider.</p>
-    </div>
-    <!--Illustration til højre-->
-    <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
-    <div class="d-none d-sm-block col-sm-2 offset-sm-4">
-      <img src="#" alt="illustration">
-    </div>
-  </div>
-</div>
-
-<!--Forår opskrifter-->
-<div id="alle-foraar" class="container-fluid orange d-none d-md-block">
-  <div class="container py-5">
-    <div class="row align-items-start px-5">
-        <h2>Forår</h2>
-             <div class="col">
-            <a href="foraar1.html"><img src="img/foraar/foraaropskrift1.png" alt=""></a>
-            <a href="foraar1.html"><h3>Opskrift</h3></a>
-            </div>
-        <div class="col">
-        <a href="foraar2.html"><img src="img/foraar/foraar2billede1.png" alt=""></a>
-        <a href="foraar2.html"><h3>Opskrift</h3></a>
-        </div>
-    <div class="col">
-      <a href="foraar3.html"><img src="img/foraar/foraar3billede2.png" alt=""></a>
-      <a href="foraar3.html"><h3>Opskrift</h3></a>
-    </div>
-    </div>
-   
-  </div>
-</div>
-
-<!--Sommer opskrifter-->
-<div id="alle-sommer" class="container d-none d-md-block">
-  <div class="row align-items-start py-5 px-5">
-    <h2>Sommer</h2>
-    <div class="col">
-      <a href="sommer1.html"><img src="img/sommer/sommer1billede1.png" alt=""></a>
-      <a href="sommer1.html"><h3>Opskrift</h3></a>
-    </div>
-    <div class="col">
-      <a href="sommer2.html"><img src="img/sommer1.png" alt=""></a>
-      <a href="sommer2.html"><h3>Opskrift</h3></a>
-    </div>
-    <div class="col">
-      <a href="sommer3.html"><img src="img/sommer/sommer3billede1.png" alt=""></a>
-      <a href="sommer3.html"><h3>Opskrift</h3></a>
-    </div>
-  </div>
-</div>
-
-<!--Efterår opskrifter-->
-<div id="alle-efteraar" class="container-fluid orange mere-padding d-none d-md-block">
-  <div class="container py-5">
-        <div class="row align-items-start px-5">
-            <h2>Efterår</h2>
-            <div class="col">
-                <a href="efteraar1.html"><img src="img/efteraar/efteraar1billede2.png" alt=""></a>
-                <a href="efteraar1.html"><h3>Opskrift</h3></a>
-            </div>
-            <div class="col">
-                <a href="efteraar2.html"><img src="img/efteraar/efteraar2billede1.png" alt=""></a>
-                <a href="efteraar2.html"><h3>Opskrift</h3></a>
-            </div>
-            <div class="col">
-                <a href="efteraar3.html"><img src="https://placehold.co/80x100" alt=""></a>
-                <a href="efteraar3.html"><h3>Opskrift</h3></a>
-            </div>
-        </div>
-  </div>
-</div>
-
-<!--Vinter opskrifter-->
-<div id="alle-vinter" class="container d-none d-md-block">
-  <div class="row align-items-start my-5 px-5">
-    <h2>Vinter</h2>
-    <div class="col">
-      <a href="vinter1.html"><img src="img/vinter/vinter1.png" alt=""></a>
-      <a href="vinter1.html"><h3>Opskrift</h3></a>
-    </div>
-    <div class="col">
-      <a href="vinter2.html"><img src="img/vinter/vinter2billede2.png" alt=""></a>
-      <a href="vinter2.html"><h3>Opskrift</h3></a>
-    </div>
-    <div class="col">
-      <a href="vinter3.html"><img src="img/vinter/vinter3billede1.png" alt=""></a>
-      <a href="vinter3.html"><h3>Opskrift</h3></a>
-    </div>
-  </div>
-</div>
-
 <!--Karussel til mobil-verison-->
 <!--Karussel Forår-->
-<main class="container my-5 d-block d-md-none">
+<main class="container my-5">
   <div class="row season-container">
 
     <!-- Forår -->
     <div class="col-12 col-md-6 col-lg-3 mb-4">
+      <h2 class="px-3">Forår</h2>
       <div id="carousel-foraar" class="carousel slide" data-bs-touch="false">
         <div class="carousel-inner">
-          <h2 class="px-3">Forår</h2>
           <div class="carousel-item active text-center">
             <a href="foraar1.html">
               <img src="img/foraar/foraaropskrift1.png" class="d-block w-100" alt="Forår opskrift 1">
@@ -198,8 +93,8 @@
 
     <!-- Sommer -->
     <div class="col-12 col-md-6 col-lg-3 mb-4">
+      <h2 class="px-3">Sommer</h2>
       <div id="carousel-sommer" class="carousel slide" data-bs-touch="false">
-        <h2 class="px-3">Sommer</h2>
         <div class="carousel-inner">
           <div class="carousel-item active text-center">
             <a href="sommer1.html">
@@ -231,8 +126,8 @@
 
     <!-- Efterår -->
     <div class="col-12 col-md-6 col-lg-3 mb-4">
+      <h2 class="px-3">Efterår</h2>
       <div id="carousel-efteraar" class="carousel slide" data-bs-touch="false">
-        <h2 class="px-3">Efterår</h2>
         <div class="carousel-inner">
           <div class="carousel-item active text-center">
             <a href="efteraar1.html">
@@ -264,8 +159,8 @@
 
     <!-- Vinter -->
     <div class="col-12 col-md-6 col-lg-3 mb-4">
+      <h2 class="px-3">Vinter</h2>
       <div id="carousel-vinter" class="carousel slide" data-bs-touch="false">
-        <h2 class="px-3">Vinter</h2>
         <div class="carousel-inner">
           <div class="carousel-item active text-center">
             <a href="vinter1.html">
@@ -301,50 +196,6 @@
 
 
 
-
-
-
-<!--Footer-->
-<footer class="py-4">
-  <div class="container d-flex flex-column align-items-center justify-content-center">
-
-      <!-- Servietbillede som baggrund -->
-      <div class="position-relative py-5 py-md-5">
-          <picture>
-              <source media="(min-width: 768px)" srcset="img/storserviet.png">
-              <img src="img/lilleserviet.png" alt="Serviet" >
-          </picture>
-
-          <!-- Tekst ovenpå billedet -->
-          <div class="kontakt-boks position-absolute top-50 start-50 translate-middle">
-              <h3>Kontakt os:</h3>
-
-              <div class="row justify-content-center">
-                  <div class="telefon col-12 col-md-6">
-                      <p>Telefon.nr.:</p>
-                      <a href="tel:+45 27 14 78">+45 27 14 78 **</a>
-                  </div>
-
-                  <div class="mail col-12 col-md-6">
-                      <p>Mail:</p>
-                      <a href="mailto:lille@skaal.dk">lille@skaal.dk</a>
-                  </div>
-              </div>
-
-              <div class="row mt-5">
-                <div class="hjerte col-4 text-end align-items-between">
-                  <!-- fs-1 gør det størrer -->
-                  <i class="bi bi-suit-heart fs-3"></i>
-                </div>
-                <div class="col-8 text-end ps-5">
-                  <a href=""><i class="bi bi-instagram m-2 fs-3"></i></a>
-                  <a href=""><i class="bi bi-tiktok fs-3"></i></a>
-                </div>
-          </div>
-      </div>
-
-  </div>
-</footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
