--- a/sommer2.html
+++ b/sommer2.html
@@ -124,9 +124,9 @@
                     </ul>
             </div>
 
-        <img src="img/sommer/sommer1billede3.png" class="billede opskrift-billede1" alt="">
-        <img src="img/sommer/sommer1billede2.png" class="billede opskrift-billede2" alt="">
-        <img src="img/sommer/sommer1billede.png" class="billede opskrift-billede3" alt="">
+        <img src="img/sommer/sommer2billede5.png" class="billede opskrift-billede1" alt="">
+        <img src="img/sommer/sommer2billede4.png" class="billede opskrift-billede2" alt="">
+        <img src="img/sommer/sommertaco.png" class="billede opskrift-billede3" alt="">
     </div>
 
 
