--- a/foraar1.html
+++ b/foraar1.html
@@ -81,7 +81,7 @@
     <!--Illustration til højre-->
     <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
     <div class="d-none d-sm-block col-sm-2 offset-sm-4">
-      <img src="#" alt="illustration">
+      <img src="img/illustrationer/basilikum.png" alt="illustration">
     </div>
   </div>
 </div>
@@ -124,7 +124,7 @@
                     </ul>
             </div>
 
-        <img src="img/foraar/foraar1billede1.png" class="billede opskrift-billede1" alt="">
+        <img src="img/foraar/foraar1tomat.png" class="billede opskrift-billede1" alt="">
         <img src="img/foraar/foraar1billede2.png" class="billede opskrift-billede2" alt="">
         <img src="img/foraar/foraar1billede3.png" class="billede opskrift-billede3" alt="">
     </div>
@@ -164,7 +164,7 @@
     <p>Hæld et glas hvidvin op og nyd vores playliste, mens du hygger dig med madlavningen</p>
 
     <div class="spotify-embed">
-        <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1DX60OAKjsWlA2?utm_source=generator&theme=0"
+        <iframe src="https://open.spotify.com/embed/playlist/3gxZCDYkyFhplZRoUdt76Y?utm_source=generator&theme=0"
         width="100%" height="140" frameBorder="0" allowfullscreen=""
         allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
         </iframe>
@@ -178,10 +178,10 @@
 
     <div class="d-flex flex-column flex-sm-row justify-content-center align-items-center gap-3 mt-3">
         <a class="col-12 col-sm-5" href="foraar2.html">
-            <img src="img/stemning/digital1.png" alt="">
+            <img src="img/foraar/foraar2billede4.png" alt=""><p>Forårs-orzo med tomater og citron</p>
         </a>
         <a class="col-12 col-sm-5" href="foraar3.html">
-            <img src="img/stemning/digital2.png" alt="">
+            <img src="img/foraar/foraar3billede1.png" alt=""><p>Forårsnudler med radiser, porre og sesam</p>
         </a>
     </div>
 </section>
