--- a/foraar2.html
+++ b/foraar2.html
@@ -67,7 +67,7 @@
 <!--TEKST UNDER HERO-->
 
 <div class="container my-sm-5 px-sm-5">
-  <h2>Pasta med tomat, spidskål og ramsløgspesto</h2>
+  <h2>Forårs-orzo med tomater og citron</h2>
 </div>
 
 <!--INTRODUKTIONS-AFSNIT-->
@@ -76,12 +76,12 @@
     <!--Tekstfelt m. introduktion til side-->
     <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
     <div class="col-12 col-sm-6">
-      <p>Lækker, lun og klar på en solrig forårsaften! Pastaen vendes med cremet ramsløgspesto, søde tomater og letstegt spidskål – simpel hverdagslykke i en skål</p>
+      <p>Lun orzo med søde tomater, spinat og citron – en hurtig pastaret med smag af forår og solmodne grøntsager. Nem at lave, svær ikke at elske.</p>
     </div>
     <!--Illustration til højre-->
     <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
     <div class="d-none d-sm-block col-sm-2 offset-sm-4">
-      <img src="#" alt="illustration">
+      <img src="img/illustrationer/rodlog.png" alt="illustration">
     </div>
   </div>
 </div>
@@ -102,7 +102,7 @@
     <div class="d-flex justify-content-evenly">
         <p>2 personer</p>
         <p>Arbejdstid: 20 min</p>
-        <p>Tid i alt: 50 min</p>
+        <p>Tid i alt: 25 min</p>
     </div>
 </section>
 
@@ -114,18 +114,17 @@
     	    <div class="ingredienser">
                 <h3>Ingredienser</h3>
                     <ul>
-                        <li>150g pasta</li>
-                        <li>1 håndfuld spidskål</li>
-                        <li>8 cherrytomater</li>
-                        <li>1 håndfuld ramsløg</li>
-                        <li>1/2 dl olie</li>
-                        <li>1 spsk solsikkekerner</li>
-                        <li>Citronsaft</li>
+                        <li>150 g orzopasta</li>
+                        <li>200 g cherrytomater</li>
+                        <li>1 håndfuld frisk spinat</li>
+                        <li>1 fed hvidløg</li>
+                        <li>1/2 økologisk citron (skal + saft)</li>
+                        <li>Revet parmesan </li>
                     </ul>
             </div>
 
-        <img src="img/foraar/foraar2billede1.png" class="billede opskrift-billede1" alt="">
-        <img src="img/foraar/foraar2billede2.png" class="billede opskrift-billede2" alt="">
+        <img src="img/foraar/foraar2tomat.png" class="billede opskrift-billede1" alt="">
+        <img src="img/foraar/foraar2billede4.png" class="billede opskrift-billede2" alt="">
         <img src="img/foraar/foraar2billede3.png" class="billede opskrift-billede3" alt="">
     </div>
 
@@ -133,22 +132,20 @@
 
     <div class="col fremgangsmaade">
       <h3>Fremgangsmåde</h3>
-        <p><strong>Kog pastaen</strong></p>
-            <p>Kog pastaen efter anvisning på pakken, og gem lidt kogevand til at justere konsistensen senere.</p>
+        <p><strong>Kog orzo</strong></p>
+            <p>Kog orzo efter anvisning på pakken. Gem lidt af kogevandet.</p>
 
-            <p><strong>Lav pestoen</strong></p>
-            <p>Blend ramsløg, olie, kerner, citron og lidt salt.</p>
+            <p><strong>Tilbered tomater</strong></p>
+            <p>Skær tomaterne i halve.</p>
+            <p>Steg dem på en pande med lidt olivenolie og presset hvidløg i 3–4 minutter, til de bliver bløde og saftige.</p>
 
-            <p><strong>Forbered grøntsagerne</strong></p>
-            <p>Snit spidskål fint og steg den hurtigt på en pande med lidt olie, indtil den falder sammen og bliver let karamelliseret.</p>
-            <p>Skær tomaterne i halve og kom dem på panden sammen med kålene de sidste minutter af tilberedningen, så de bliver let opvarmede og bløde.</p>
-
-            <p><strong>Samle retten</strong></p>
-            <p>Vend den kogte pasta med pesto, spidskål og tomater. Tilsæt lidt af pastavandet, hvis retten virker for tør.</p>
+            <p><strong>Saml retten</strong></p>
+            <p>Vend den varme orzo med stegte tomater, spinat, revet citronskal og lidt citronsaft.</p>
+            <p>Tilsæt lidt af pastavandet, hvis det virker tørt.</p>
+            <p>Smag til med salt, peber og evt. ekstra citron.</p>
 
             <p><strong>Server</strong></p>
-            <p>Server med ekstra pesto og evt. revet ost eller friskhakkede urter på toppen.</p>
-      
+            <p>Top med revet parmesan og lidt ekstra olivenolie. Spis lun – gerne ude i solen.</p>
     </div>
   </div>
 </div>
@@ -158,18 +155,20 @@
 
 
 
+
 <!--Musik-->
 <section class="container playlist-section my-5 px-sm-5">
-    <h3>Gør det hyggeligt!</h3>
-    <p>Hæld et glas hvidvin op og nyd vores playliste, mens du hygger dig med madlavningen</p>
+  <h3>Gør det hyggeligt!</h3>
+  <p>Hæld et glas hvidvin op og nyd vores playliste, mens du hygger dig med madlavningen</p>
 
-    <div class="spotify-embed">
-        <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1DX60OAKjsWlA2?utm_source=generator&theme=0"
-        width="100%" height="140" frameBorder="0" allowfullscreen=""
-        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
-        </iframe>
-    </div>
+  <div class="spotify-embed">
+      <iframe src="https://open.spotify.com/embed/playlist/3gxZCDYkyFhplZRoUdt76Y?utm_source=generator&theme=0"
+      width="100%" height="140" frameBorder="0" allowfullscreen=""
+      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+      </iframe>
+  </div>
 </section>
+
 
 
 <!--Andre opskrifter-->
@@ -177,11 +176,11 @@
     <h3>Hvad skal du lave i morgen?</h3>
 
     <div class="d-flex flex-column flex-sm-row justify-content-center align-items-center gap-3 mt-3">
-        <a class="col-12 col-sm-5" href="foraar2.html">
-            <img src="img/stemning/digital1.png" alt="">
-        </a>
-        <a class="col-12 col-sm-5" href="foraar3.html">
-            <img src="img/stemning/digital2.png" alt="">
+      <a class="col-12 col-sm-5" href="foraar3.html">
+        <img src="img/foraar/foraar3billede1.png" alt=""><p>Forårsnudler med radiser, porre og sesam</p>
+    </a>
+        <a class="col-12 col-sm-5" href="foraar1.html">
+            <img src="img/foraar/foraar1billede2.png" alt=""><p>Pasta med tomat, spidskål og ramsløgspesto</p>
         </a>
     </div>
 </section>
