--- a/foraar3.html
+++ b/foraar3.html
@@ -53,7 +53,6 @@
 </nav>
 
 
-
 <!--HERO-SEKTION-->
 <!--BAGGRUNDSBILLEDE-->
 <div class="hero-sektion position-relative">
@@ -67,7 +66,7 @@
 <!--TEKST UNDER HERO-->
 
 <div class="container my-sm-5 px-sm-5">
-  <h2>Pasta med tomat, spidskål og ramsløgspesto</h2>
+  <h2>Forårsnudler med radiser, porre og sesam</h2>
 </div>
 
 <!--INTRODUKTIONS-AFSNIT-->
@@ -76,16 +75,15 @@
     <!--Tekstfelt m. introduktion til side-->
     <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
     <div class="col-12 col-sm-6">
-      <p>Lækker, lun og klar på en solrig forårsaften! Pastaen vendes med cremet ramsløgspesto, søde tomater og letstegt spidskål – simpel hverdagslykke i en skål</p>
+      <p>En let og lun nudelret med sprøde radiser, sød porre og et strejf af citron og sesam. Smager af forår og kræver næsten ingen indsats.</p>
     </div>
     <!--Illustration til højre-->
     <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
     <div class="d-none d-sm-block col-sm-2 offset-sm-4">
-      <img src="#" alt="illustration">
+      <img src="img/illustrationer/porre.png" alt="illustration">
     </div>
   </div>
 </div>
-
 
 
 <!--Info-linje om tid og antal per.-->
@@ -97,12 +95,11 @@
 <hr class="linje">
 
 
-
     <!--sætter hver p ved siden af hinanden horisontalt-->
     <div class="d-flex justify-content-evenly">
         <p>2 personer</p>
         <p>Arbejdstid: 20 min</p>
-        <p>Tid i alt: 50 min</p>
+        <p>Tid i alt: 20 min</p>
     </div>
 </section>
 
@@ -111,43 +108,40 @@
   <div class="row align-items-start d-flex flex-column flex-md-column flex-lg-row">
 
     <div class="col collage-opskrift-container">
-    	    <div class="ingredienser">
+            <div class="ingredienser">
                 <h3>Ingredienser</h3>
                     <ul>
-                        <li>150g pasta</li>
-                        <li>1 håndfuld spidskål</li>
-                        <li>8 cherrytomater</li>
-                        <li>1 håndfuld ramsløg</li>
-                        <li>1/2 dl olie</li>
-                        <li>1 spsk solsikkekerner</li>
+                        <li>150g nudler</li>
+                        <li>1 lille porre</li>
+                        <li>6 radiser</li>
+                        <li>Sesamfrø</li>
+                        <li>Sojasauce</li>
+                        <li>1/2 citron</li>
                         <li>Citronsaft</li>
                     </ul>
             </div>
 
-        <img src="img/foraar/foraar1billede1.png" class="billede opskrift-billede1" alt="">
-        <img src="img/foraar/foraar1billede2.png" class="billede opskrift-billede2" alt="">
-        <img src="img/foraar/foraar1billede3.png" class="billede opskrift-billede3" alt="">
+        <img src="img/foraar/foraar3billede1igen.png" class="billede opskrift-billede1" alt="">
+        <img src="img/foraar/foraar3ny.png" class="billede opskrift-billede2" alt="">
+        <img src="img/foraar/foraaar.png" class="billede opskrift-billede3" alt="">
     </div>
-
 
 
     <div class="col fremgangsmaade">
       <h3>Fremgangsmåde</h3>
-        <p><strong>Kog pastaen</strong></p>
-            <p>Kog pastaen efter anvisning på pakken, og gem lidt kogevand til at justere konsistensen senere.</p>
+        <p><strong>Kog nudlerne</strong></p>
+            <p>Kog nudlerne efter anvisning og skyl dem kort i koldt vand.</p>
 
-            <p><strong>Lav pestoen</strong></p>
-            <p>Blend ramsløg, olie, kerner, citron og lidt salt.</p>
+            <p><strong>Forbered grøntsager</strong></p>
+            <p>Skær porre i tynde ringe og radiser i fine skiver.</p>
+            <p>Steg porren i olie på en pande i 3–4 min, til den bliver blød og sødlig. Tilsæt radiser og steg med i 1 min.</p>
 
-            <p><strong>Forbered grøntsagerne</strong></p>
-            <p>Snit spidskål fint og steg den hurtigt på en pande med lidt olie, indtil den falder sammen og bliver let karamelliseret.</p>
-            <p>Skær tomaterne i halve og kom dem på panden sammen med kålene de sidste minutter af tilberedningen, så de bliver let opvarmede og bløde.</p>
-
-            <p><strong>Samle retten</strong></p>
-            <p>Vend den kogte pasta med pesto, spidskål og tomater. Tilsæt lidt af pastavandet, hvis retten virker for tør.</p>
+            <p><strong>Vend det hele sammen</strong></p>
+            <p>Tilsæt nudler, sesamfrø, et skvæt soja og lidt citronsaft. Vend det hele sammen og smag til.</p>
 
             <p><strong>Server</strong></p>
-            <p>Server med ekstra pesto og evt. revet ost eller friskhakkede urter på toppen.</p>
+            <p>Anret i skåle og drys evt. med ekstra sesam og lidt citron på toppen.</p>
+
       
     </div>
   </div>
@@ -157,20 +151,18 @@
 
 
 
-
 <!--Musik-->
 <section class="container playlist-section my-5 px-sm-5">
     <h3>Gør det hyggeligt!</h3>
     <p>Hæld et glas hvidvin op og nyd vores playliste, mens du hygger dig med madlavningen</p>
 
     <div class="spotify-embed">
-        <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1DX60OAKjsWlA2?utm_source=generator&theme=0"
+        <iframe src="https://open.spotify.com/embed/playlist/3gxZCDYkyFhplZRoUdt76Y?utm_source=generator&theme=0"
         width="100%" height="140" frameBorder="0" allowfullscreen=""
         allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
         </iframe>
     </div>
 </section>
-
 
 <!--Andre opskrifter-->
 <section class="container my-5 px-sm-5">
@@ -178,14 +170,13 @@
 
     <div class="d-flex flex-column flex-sm-row justify-content-center align-items-center gap-3 mt-3">
         <a class="col-12 col-sm-5" href="foraar2.html">
-            <img src="img/stemning/digital1.png" alt="">
+            <img src="img/foraar/foraar2billede4.png" alt=""><p>Forårs-orzo med tomater og citron</p>
         </a>
-        <a class="col-12 col-sm-5" href="foraar3.html">
-            <img src="img/stemning/digital2.png" alt="">
-        </a>
+        <a class="col-12 col-sm-5" href="foraar1.html">
+          <img src="img/foraar/foraar1billede2.png" alt=""><p>Pasta med tomat, spidskål og ramsløgspesto</p>
+      </a>
     </div>
 </section>
-
 
 
 <!--Kommentarspor-->
@@ -204,7 +195,6 @@
     <div id="commentsContainer"></div>
   </div>
 </div>
-
 
 <!-- Footer -->
 <footer class="py-4">
@@ -252,9 +242,11 @@
 
 
 
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 
     <script src="script.js"></script>
   </body>
 </html>
+
+
+
