--- a/vinter1.html
+++ b/vinter1.html
@@ -67,7 +67,7 @@
 <!--TEKST UNDER HERO-->
 
 <div class="container my-sm-5 px-sm-5">
-  <h2>Pasta med tomat, spidskål og ramsløgspesto</h2>
+  <h2>Vinter-nudler med porre, kål og cremet sesamsauce</h2>
 </div>
 
 <!--INTRODUKTIONS-AFSNIT-->
@@ -76,12 +76,12 @@
     <!--Tekstfelt m. introduktion til side-->
     <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
     <div class="col-12 col-sm-6">
-      <p>Lækker, lun og klar på en solrig forårsaften! Pastaen vendes med cremet ramsløgspesto, søde tomater og letstegt spidskål – simpel hverdagslykke i en skål</p>
+      <p>En varm, trøstende nudelret med sprød kål, sødme fra porre og en cremet asiatisk inspireret sauce. Perfekt til kolde hverdagsaftener, hvor man har brug for lidt varme og kærlighed i en skål.</p>
     </div>
     <!--Illustration til højre-->
     <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
     <div class="d-none d-sm-block col-sm-2 offset-sm-4">
-      <img src="#" alt="illustration">
+      <img src="img/illustrationer/porre.png" alt="illustration">
     </div>
   </div>
 </div>
@@ -102,7 +102,7 @@
     <div class="d-flex justify-content-evenly">
         <p>2 personer</p>
         <p>Arbejdstid: 20 min</p>
-        <p>Tid i alt: 50 min</p>
+        <p>Tid i alt: 25 min</p>
     </div>
 </section>
 
@@ -114,17 +114,17 @@
     	    <div class="ingredienser">
                 <h3>Ingredienser</h3>
                     <ul>
-                        <li>150g pasta</li>
-                        <li>1 håndfuld spidskål</li>
-                        <li>8 cherrytomater</li>
-                        <li>1 håndfuld ramsløg</li>
-                        <li>1/2 dl olie</li>
-                        <li>1 spsk solsikkekerner</li>
-                        <li>Citronsaft</li>
+                        <li>150g nudler</li>
+                        <li>1 lille porre</li>
+                        <li>1/4 spidskål</li>
+                        <li>1 fed hvidløg</li>
+                        <li>1 spsk peanutbutter eller tahin</li>
+                        <li>Sojasauce</li>
+                        <li>Topping: sesamfrø, citron</li>
                     </ul>
             </div>
 
-        <img src="img/vinter/vinter1billede1.png" class="billede opskrift-billede1" alt="">
+        <img src="img/vinter/vinter1billede1ny.png" class="billede opskrift-billede1" alt="">
         <img src="img/vinter/vinter1billede2.png" class="billede opskrift-billede2" alt="">
         <img src="img/vinter/vinter1billede3.png" class="billede opskrift-billede3" alt="">
     </div>
@@ -133,22 +133,25 @@
 
     <div class="col fremgangsmaade">
       <h3>Fremgangsmåde</h3>
-        <p><strong>Kog pastaen</strong></p>
-            <p>Kog pastaen efter anvisning på pakken, og gem lidt kogevand til at justere konsistensen senere.</p>
+        <p><strong>Snit grønt</strong></p>
+            <p>Skær porre i skiver og snit spidskål fint. Hak hvidløg.</p>
 
-            <p><strong>Lav pestoen</strong></p>
-            <p>Blend ramsløg, olie, kerner, citron og lidt salt.</p>
+            <p><strong>Karamellisér porren</strong></p>
+            <p>Steg porreskiverne i olie på en varm pande i 5–6 minutter, til de bliver bløde og gyldne. Tag dem af og læg dem til side.</p>
 
-            <p><strong>Forbered grøntsagerne</strong></p>
-            <p>Snit spidskål fint og steg den hurtigt på en pande med lidt olie, indtil den falder sammen og bliver let karamelliseret.</p>
-            <p>Skær tomaterne i halve og kom dem på panden sammen med kålene de sidste minutter af tilberedningen, så de bliver let opvarmede og bløde.</p>
+            <p><strong>Lav saucen</strong></p>
+            <p>Rør sojasauce, peanutbutter og hvidløg sammen. Tilsæt en smule varmt vand for at gøre den cremet.</p>
 
-            <p><strong>Samle retten</strong></p>
-            <p>Vend den kogte pasta med pesto, spidskål og tomater. Tilsæt lidt af pastavandet, hvis retten virker for tør.</p>
+            <p><strong>Steg kål</strong></p>
+            <p>Steg spidskål i samme pande i et par minutter – det skal stadig have lidt bid.
+            </p>
+
+            <p><strong>Kog nudler</strong></p>
+            <p>Kog nudlerne som anvist og vend dem direkte i panden med kålen. Tilsæt saucen og rør det hele godt sammen.</p>
+
 
             <p><strong>Server</strong></p>
-            <p>Server med ekstra pesto og evt. revet ost eller friskhakkede urter på toppen.</p>
-      
+            <p>Top med den karamelliserede porre og drys evt. med sesamfrø og lidt citron.</p>
     </div>
   </div>
 </div>
@@ -164,7 +167,7 @@
     <p>Hæld et glas hvidvin op og nyd vores playliste, mens du hygger dig med madlavningen</p>
 
     <div class="spotify-embed">
-        <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1DX60OAKjsWlA2?utm_source=generator&theme=0"
+        <iframe src="https://open.spotify.com/embed/playlist/1wd79oLAXj0oZdjOsVptYT?utm_source=generator&theme=0"
         width="100%" height="140" frameBorder="0" allowfullscreen=""
         allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
         </iframe>
@@ -177,11 +180,11 @@
     <h3>Hvad skal du lave i morgen?</h3>
 
     <div class="d-flex flex-column flex-sm-row justify-content-center align-items-center gap-3 mt-3">
-        <a class="col-12 col-sm-5" href="foraar2.html">
-            <img src="img/stemning/digital1.png" alt="">
+        <a class="col-12 col-sm-5" href="vinter2.html">
+            <img src="img/vinter/vinter2billede1.png" alt=""><p> Vinterpasta med grønkålssauce og citron</p>
         </a>
-        <a class="col-12 col-sm-5" href="foraar3.html">
-            <img src="img/stemning/digital2.png" alt="">
+        <a class="col-12 col-sm-5" href="vinter3.html">
+            <img src="img/vinter/vinter3billede3.png" alt=""><p></p>
         </a>
     </div>
 </section>
